# EncameraCore

./: .gitignore  Info.plist  Localizable.strings  Package.resolved  Package.swift  README.md  Strings+Generated.swift  project.yml  swiftgen.yml
App Store/: AppStoreDescription.md
AuthenticationView/: AuthenticationView.swift
CameraView/: CameraModel.swift  CameraView.swift
CaptureProcessors/: AsyncVideoCaptureProcessor.swift
Components/: ProgressViewCircular.swift
Constants/: URLTypes.swift  UserDefaultKeys.swift
Encamera/: CameraPreview.swift  CameraService.swift  Encamera.entitlements  EncameraApp.swift  ImageResizer.swift  (+3 more)
Encamera.xcodeproj/: project.pbxproj
Sources/EncameraCore/scripts/app_store_localization/asc-mcp/: README.md  pyproject.toml
Sources/EncameraCore/scripts/app_store_localization/asc-mcp/src/asc/: __init__.py  auth.py  client.py  models.py  releases.py  server.py
Sources/EncameraCore/scripts/app_store_localization/asc-mcp/src/asc/pricing/: iap.py  subscriptions.py
Sources/EncameraCore/scripts/app_store_localization/asc-mcp/src/asc/xcode_cloud/: artifacts.py  build_actions.py  issues.py  workflows.py
Sources/EncameraCore/scripts/asc/: AGENTS.md  README.md  pyproject.toml
Sources/EncameraCore/scripts/asc-mcp/: README.md  pyproject.toml  requirements.txt
Sources/EncameraCore/scripts/asc-mcp/src/asc_mcp/: __init__.py
Sources/EncameraCore/scripts/asc/src/asc/: client.py  releases.py  testflight.py
Sources/EncameraCore/scripts/asc/src/asc/xcode_cloud/: __init__.py  build_runs.py  environments.py  models.py  products.py  test_results.py
(+859 files in other folders)
