[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "asc-mcp"
version = "0.1.0"
description = "MCP server for App Store Connect API"
requires-python = ">=3.10"
# Note: the `asc` library is a path dependency installed via requirements.txt
# (pip can't resolve relative path deps from pyproject.toml directly).
dependencies = [
    "mcp>=1.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/asc_mcp"]

[project.scripts]
asc-mcp = "asc_mcp.server:main"
