[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "asc"
version = "0.1.0"
description = "Python client library for the App Store Connect API"
requires-python = ">=3.10"
dependencies = [
    "PyJWT>=2.8.0",
    "cryptography>=41.0.0",
    "requests>=2.31.0",
    "pyyaml>=6.0.1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/asc"]
