[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "asc-mcp"
version = "0.1.0"
description = "MCP server for App Store Connect API"
requires-python = ">=3.10"
dependencies = [
    "PyJWT>=2.8.0",
    "cryptography>=41.0.0",
    "requests>=2.31.0",
    "pyyaml>=6.0.1",
    "mcp>=1.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/asc"]

[project.scripts]
asc-mcp = "asc.server:main"
